finalized initial demo site

--- a/index.html
+++ b/index.html
@@ -1,8 +1,86 @@
+
+
 <html>
-		<head>
-			<title>My Demo Webpage</title>
-		</head>
-		<body>
-			<h1>Karen Steel</h1>
-		</body>
+
+    <head>
+
+	<title>My Demo Webpage</title>
+
+	<link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+
+	<style>
+
+	 .bg {
+
+             background:url('http://static.vecteezy.com/system/resources/previews/000/094/491/original/polygonal-texture-background-vector.jpg'); 
+
+             color:#9b59b6;
+
+	     margin-top: 7%;
+
+	 }
+
+	 .profile_pic{
+
+             height:200px;
+
+	     width:200px;
+
+	     border-radius:50%;
+
+	 }
+
+
+	 a {
+	 	color: white;
+	 	text-decoration: none;
+	 }
+
+
+	 a:hover{
+	 	color: #c0392b;
+	 }
+
+	</style>
+
+    </head>
+
+    <body class="bg">
+
+	<center>
+
+	    <img class="profile_pic" src = "http://petus.imageg.net/PETNA_36/pimg/pPETNA-4032756_main_r200.jpg" alt = "My profile image">
+
+	    <h1>Karen Steel</h1>
+
+            <h3>Biologists: Honeybee Researcher</h3>
+
+            <a href="http://linkedin.com"></i>
+
+	        <i class="fa fa-3x fa-linkedin-square" aria-hidden="true"></i>
+
+	        <a href="http://linkedin.com"></i>
+
+	        <i class="fa fa-3x fa-twitter-square" aria-hidden="true"></i>
+
+	        <a href="http://linkedin.com"></i>
+
+            <i class="fa fa-3x fa-github-square" aria-hidden="true"></i>
+
+
+            <a href="http://linkedin.com"></i>
+            <i class="fa fa-3x fa-envelope-square" aria-hidden="true"></i>
+
+	    <p>    dslkjsalkdjsaldkjsada
+
+		sdlkjadlksjdlakjsldksjad   dsalkjdsa  sa
+
+            </p>
+
+	</center>
+
+    </body>
+
 <html>
+
+    
